# textplex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILLS.md  docker-compose.yml  package-lock.json  package.json  pytest.ini
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: __init__.py  paths.py
apps/api/app/db/migrations/book/: 0001_initial.sql
apps/api/app/db/migrations/lexicon/: 0001_initial.sql
apps/api/app/db/migrations/user/: 0001_initial.sql  0002_profile_migrations.sql  0003_learning_event_sync.sql  0004_commerce.sql
apps/api/app/schemas/: __init__.py  auth.py  books.py  learning.py  lexicon.py  migration.py  surfaces.py  themes.py
apps/api/app/services/: __init__.py  auth.py  book_extraction.py  book_registry.py  book_sources.py  commerce.py  korean_lexicon_builder.py  learning_profile.py  learning_sync.py  lexicon.py  ocr.py  profile_migration.py  russian_lexicon_builder.py  surfaces.py  themes.py
docs/: ARCHITECTURE.md  AUDIT.md  CHINESE_TEXT_PROCESSING.md  COMPONENTS_INVENTORY.md  DATA_MODEL.md  FRONTEND_MIGRATION_PHASE_1.md  FRONTEND_MIGRATION_PHASE_2.md  FRONTEND_MIGRATION_PHASE_3.md  FRONTEND_MIGRATION_PHASE_4.md  FRONTEND_MIGRATION_PHASE_5.md  FRONTEND_MIGRATION_PHASE_6.md  FRONTEND_MIGRATION_PHASE_7.md  FRONTEND_MIGRATION_REPORT.md  ISSUE_TRACKER.md  JAPANESE_TEXT_PROCESSING.md  KOREAN_TEXT_PROCESSING.md  LOCAL_DEVELOPMENT.md  MVP_BACKLOG.md  NON_ROMANIZED_LANGUAGE_LEARNER_ECOSYSTEM.md  NON_ROMANIZED_LANGUAGE_PROCESSING_TEMPLATE.md  OPERATIONS_RUNBOOK.md  (+11 more)
(+149 files in other folders)
